--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <h3>Tomorrow is my birthday!</h3>
             </div>
             <!-- New HTML content goes here! -->
-            
+            <p>Today's class was informative.</p>
+            <em>This weekend I will study more coding!</em>
+            <br><strong>The food I'm looking forward to is pie.</strong>
+
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
@@ -30,6 +33,6 @@
                 <h3>Github isn't easy!</h3>
             </div>
         </section>
-    </main>
+    </main>     
 </body>
 </html>
